--- a/source/404.md
+++ b/source/404.md
@@ -1,3 +1,5 @@
+---
 layout: 404
-title: "[404]"
-description: "May the Force be with you :&#41;"
+description: "你来到了没有知识的荒原 :("
+header-img: "img/404.gif"
+---
