--- a/source/_posts/性能优化.md
+++ b/source/_posts/性能优化.md
@@ -1,7 +1,9 @@
 ---
 title: 性能优化
 date: 2018-04-25 20:48:00
-tags:
+tags: 性能优化
+header-img: "/img/header_img/content-bg.jpg"
+catalog: true
 ---
 
 # Web前端性能优化
